# ia-tp2

./: README.md  pyproject.toml
src/ia/: generate_dataset.py  graphing.py  hopfield-2.py  hopfield.py  hopfield_2.py  hough.py  hough_sandbox.ipynb  image_loader.py  tp2.py  tp3.py  tp4.py  tp_3.py
src/modelos/: tp1.ipynb  tp2.ipynb  tp3.ipynb
