[project]
name = "ia"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "JP Lorandi", email = "jp@cfyar.com"},
]
dependencies = [
    "pygraphviz>=1.13",
    "plotly>=5.22.0",
    "matplotlib>=3.8.4",
    "networkx>=3.3",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
