[project]
name = "ia"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "JP Lorandi", email = "jp@cfyar.com"},
]
dependencies = [
    "pygraphviz>=1.13",
    "plotly>=5.22.0",
    "matplotlib>=3.8.4",
    "networkx>=3.3",
    "numpy>=1.26.4",
    "tqdm>=4.66.4",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.3.0",
    "drawsvg[all]>=2.3.0",
    "git+https://github.com/ml-jku/hopfield-layers",
    "hopfield-layers @ git+https://github.com/ml-jku/hopfield-layers",
    "pandas>=2.2.2",
    "opencv-python>=4.10.0.82",
    "jupyter>=1.0.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
